# final-situational-task

./: README.md  pyproject.toml
config/: settings.py  urls.py
product/: models.py  serializers.py  tests.py  urls.py  views.py
product/category/: apps.py  models.py  serializers.py  urls.py  views.py
product/category/migrations/: 0001_initial.py
product/migrations/: 0001_initial.py
